Fixes symptom log date bug

--- a/app/src/main/res/layout/fragment_symptom.xml
+++ b/app/src/main/res/layout/fragment_symptom.xml
@@ -14,7 +14,7 @@
         android:layout_width="212dp"
         android:layout_height="48dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="100dp"
         android:ems="10"
         android:inputType="date"
@@ -55,11 +55,11 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="300dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/calendar_outline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.282"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
@@ -80,11 +80,12 @@
         android:id="@+id/symptomToolBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:lineSpacingExtra="24sp"
         android:text="Log Symptom"
         android:textAlignment="textStart"
         android:textColor="@color/white"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
