--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -31,7 +31,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="29dp"
                 android:layout_marginTop="73dp"
-                android:textColor="#5D4037" />
+                android:textColor="#5D4037"
+                android:textSize="15dp" />
 
 
         </RelativeLayout>
